# DeformationModel

./: PythonBinding.py  README.md
S01_IsometricGeodesic/: CMakeLists.txt  main.cpp
S02_PickPartOfModel/: LeftArmVIds.json  M02_ObjConverter.py  S01_PickSelectedVertsOnMesh.py  SelectLeftArm.blend  SelectLeftArm.blend1
S03_GenerateSumOfGuassian/: S01_MultivarianceGuassian.py  S02_Blend2MultivarianceGuassian.py  S03_Blend2MultivarianceGuassianWithScalarfield.py  S04_ManuallyDesignMergeTree.py  S05_ReadPVDMergeTree.py
S04_IsometricGeodesicOnlyZ/: CMakeLists.txt  main.cpp
S05_ReverseEngineeringOfMergeTree/: Geodesic.py  LaplacianMat.npz  LaplacianMat_202_74.npz  LaplacianMat_212_84.npz  LaplacianMat_256_257.npz  M01_TopologicalExtraction.py  M02_ScalarFieldInterpolation.py  M03_Preprocessing.py  M04_InterpolationAnimation.py  M05_InverseConstraints.py  Online shemale video A Conversation with Fish.mp4.REMOVED.git-id  ParameterizeContourLine.py  README.md  ReverseEngineerAScalarFieldThroughMergeTree.pptx  S02_SolveScalarField.py  S03_SolveScalarFieldContourLIneConstraintInterpolationConstraint.py  S04_GenerateNewScalarField.py  S05_LoadMergeTreeData.py  S06_TransitionAnimartion.py  S07_AnimationToGIf.py  S08_ExtractContourLine.py  S09_Example01_Animation.py  S10_Example02_ExtractConstraintAndReconstruct.py  S11_Geodesic.py  S12_ReverseEngineer.py  S13_TestNewPipeline.py  S14_TreeDeformation_1.py  S15_InverseEngineer.py  S16_InverseEngineer_vertexSlice.py  S17_InverseEngineer_movingGaussian.py  S18_PadBoundary.py  S19_loadContour.py  TreeNodes.npy  allPts.ply  test.ply  (+4 more)
(+9023 files in other folders)
